examples/test/testpolicy15691.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15691
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key11: value32
      key39: value23
      key26: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value42
          key40: value21
      podSelector:
        matchLabels:
          key46: value24
